Collect data connectors into list via Collectors